--- a/Backend_facturacion/config.env
+++ b/Backend_facturacion/config.env
@@ -1,1 +1,1 @@
-DB_MONGO = mongodb+srv://admin2:admin@cluster0.7v7tac6.mongodb.net/
+DB_MONGO = mongodb+srv://admin2:admin@cluster0.7v7tac6.mongodb.net/proyecto
